@@ -72,6 +72,7 @@ Version 2.0.0rc6 - The '???' version.
 		  functions.
 		* Fixed Resume/Pause bug in amulecmd/amule. Now Resume/Pause
 		  argument starts at zero.
+		* More gsocket.h update.
 
 	rommel:
 		* Patch to implement the commands serverconnect and reloadipf
